--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=${DB_URL:jdbc:h2:mem:testdb}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=${DB_USER:sa}
+spring.datasource.password=${DB_PASSWORD:password}
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.h2.console.enabled=${DB_CONSOLE:true}
+# default path: h2-console
+spring.h2.console.path=/h2-ui
