Rename class and fix vscode settings

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "type": "java",
             "name": "Launch Spring",
             "request": "launch",
-            "mainClass": "service.WebServer"
+            "mainClass": "com.hna.webserver.WebServerApplication"
         }
     ]
 }
